--- a/twig/kontakter.twig.html
+++ b/twig/kontakter.twig.html
@@ -1,6 +1,8 @@
 <h1>Kontakt-eksport</h1>
 <p class="lead">Last ned kontakter herfra, og importer de til ukmhd1@gmail.com for å dele kontaktlister</p>
 
+<p>Filen kan lastes ned på:</p>
+<div class="alert alert-info">{{ zip }}</div>
 
 <table class="table table-striped">
 	<tr>
