kontakteksport med excel-støtte?

--- a/twig/kontakter.twig.html
+++ b/twig/kontakter.twig.html
@@ -1,8 +1,10 @@
 <h1>Kontakt-eksport</h1>
 <p class="lead">Last ned kontakter herfra, og importer de til ukmhd1@gmail.com for å dele kontaktlister</p>
 
-<p>Filen kan lastes ned på:</p>
+<p>VCS-filer kan lastes ned fra:</p>
 <div class="alert alert-info">{{ zip }}</div>
+<p>Excel-fil kan lastes ned fra_</p>
+<div class="alert alert-info">{{ excel }}</div>
 
 <table class="table table-striped">
 	<tr>
