--- a/twig/kontakter.twig.html
+++ b/twig/kontakter.twig.html
@@ -1,10 +1,14 @@
 <h1>Kontakt-eksport</h1>
 <p class="lead">Last ned kontakter herfra, og importer de til ukmhd1@gmail.com for å dele kontaktlister</p>
 
-<p>VCS-filer kan lastes ned fra:</p>
-<div class="alert alert-info">{{ zip }}</div>
-<p>Excel-fil kan lastes ned fra_</p>
-<div class="alert alert-info">{{ excel }}</div>
+<div class="col-xs-12 col-sm-6">
+	<h4>VCS-filer</h4>
+	<div class="alert alert-info">{{ zip }}</div>
+</div>
+<div class="col-xs-12 col-sm-6">
+	<h4>Excel-liste</h4>
+	<div class="alert alert-info">{{ excel }}</div>
+</div>
 
 <table class="table table-striped">
 	<tr>
