Bug fix new season
Close https://github.com/UKMNorge/UKMnetwork_admin/issues/1
Close https://github.com/UKMNorge/UKMnetwork_admin/issues/4
Close https://github.com/UKMNorge/UKMnetwork_admin/issues/3

--- a/twig/ny_sesong/dash.twig.html
+++ b/twig/ny_sesong/dash.twig.html
@@ -32,13 +32,13 @@
 <h3>Ny sesong</h3>
 <div class="row">
 	<p class="alert alert-warning col-xs-12 col-sm-8">
-		Nå begynner det du kun kan gjøre én gang, og disse må gjøres etter hverandre i samme arbeidsøk
+		Nå begynner det du kun kan gjøre én gang, og disse må gjøres etter hverandre i samme arbeidsøkt
 	</p>
 </div>
 <ol>
-		<li>Initier ny sesong <a href="/wp-admin/network/admin.php?page=UKMA_ny_sesong&do=true&init=true">[klikk her for å starte]</a></li>
-		<li>Oppdater wordpress <a href="/wp-admin/network/admin.php?page=UKMA_ny_sesong&do=wordpress">[klikk her for å starte]</a></li>
-		<li>Opprett nye mønstringssider <a href="/wp-admin/network/admin.php?page=UKMA_ny_sesong&start=0&stop=5&do=true">[klikk her for å starte]</a></li>
-		<li>Oppdater URL-adresser <a href="/wp-admin/network/admin.php?page=UKMA_rewrite">[klikk her for å re-generere adresser]</a></li>
+		<li>Initier ny sesong <a href="/wp-admin/network/admin.php?page=UKMsystemtools_ny_sesong&do=true&init=true">[klikk her for å starte]</a></li>
+		<li>Oppdater wordpress <a href="/wp-admin/network/admin.php?page=UKMsystemtools_ny_sesong&do=wordpress">[klikk her for å starte]</a></li>
+		<li>Opprett nye mønstringssider <a href="/wp-admin/network/admin.php?page=UKMsystemtools_ny_sesong&start=0&stop=5&do=true">[klikk her for å starte]</a></li>
+		<li>Oppdater URL-adresser <a href="/wp-admin/network/admin.php?page=UKMsystemtools_modrewrite">[klikk her for å re-generere adresser]</a></li>
 		<li>Fiks bruker for Lærdal og Lardal <a href="http://github.com/UKMNorge/UKMnetwork_admin/issues/4" target="_blank">[les mer]</a></li>
 </ol>
