--- a/twig/ny_sesong/steg1_top.twig.html
+++ b/twig/ny_sesong/steg1_top.twig.html
@@ -27,7 +27,7 @@
 		</li>
 	
 		<li>
-			<label>Standard videresendingsfrist ($newFylkeDeadline)</label>	{{ newFylkeDeadline }}
+			<label>Standard videresendingsfrist ($newFylkeDeadline)</label>	{{ newFylkeDeadline|date('d.m.Y') }}
 		</li>
 	</ul>
 	
