--- a/twig/kontakter.twig.html
+++ b/twig/kontakter.twig.html
@@ -24,7 +24,7 @@
 	<tr>
 		<td>{{ contact.first_name }}</td>
 		<td>{{ contact.last_name }}</td>
-		<td>{{ contact.phone }}<br />{{ contact.phone }}#500<br />{{ contact.phone }}#600</td>
+		<td>{{ contact.phone }}<br />{{ contact.phone }}500<br />{{ contact.phone }}600</td>
 		<td>{{ contact.email }}</td>
 		<td>{{ contact.title }}</td>
 		<td>UKM {{ contact.monstring }}</td>
