--- a/twig/kontakter.twig.html
+++ b/twig/kontakter.twig.html
@@ -3,12 +3,19 @@
 
 <div class="col-xs-12 col-sm-6">
 	<h4>VCS-filer</h4>
-	<div class="alert alert-info">{{ zip }}</div>
+	<div class="alert alert-info"><a href="{{ zip }}">{{ zip }}</a></div>
 </div>
 <div class="col-xs-12 col-sm-6">
 	<h4>Excel-liste</h4>
-	<div class="alert alert-info">{{ excel }}</div>
+	<div class="alert alert-info"><a href="{{ excel }}">{{ excel }}</a></div>
 </div>
+
+<p class="lead">For import til nyhetsbrevet kan også dette excel-arket lastes ned for å synce mot passordlisten</p>
+<div class="col-xs-12 col-sm-6">
+	<h4>Excel-liste</h4>
+	<div class="alert alert-info"><a href="{{ excel_passord }}">{{ excel_passord }}</a></div>
+</div>
+
 
 <table class="table table-striped">
 	<tr>
