Info om httracker-oppsett

--- a/twig/ny_sesong/dash.twig.html
+++ b/twig/ny_sesong/dash.twig.html
@@ -10,7 +10,9 @@
 
 <h2>Forberedelser</h2>
 <ol>
-	<li>Lag HTMl-kopi av nettsiden <a href="https://www.httrack.com/" target="_blank">HTTracker software</a></li>
+	<li>Lag HTMl-kopi av nettsiden <a href="https://www.httrack.com/" target="_blank">HTTracker software</a> 
+		<br /><small>(obs: denne kan ødelegge e-postlenker. I 2016 prøvd å ikke krysse av for "build mail index")</small>
+	</li>
 	<li>Opprett en ny konto på cPanel ({{"now"|date('Y')}}.ukm.no), og last opp HTML-kopien dit</li>
 	<li>Legg inn index.php for videresending fra forside til derdubor (se forrige år)</li>
 	<li>Legg inn videresending i wp-login-fila</li>
