--- a/twig/ny_sesong/steg1_top.twig.html
+++ b/twig/ny_sesong/steg1_top.twig.html
@@ -20,7 +20,7 @@
 	<h3>Ny sesong (den vi går til)</h3>
 	<ul class="list-unstyled">
 		<li>
-			<label>Ny sesong ($activeSeason)</label>	{{ activeSeason }}
+			<label>Ny sesong ($newSeason)</label>	{{ newSeason }}
 		</li>
 		<li>
 			<label>Standard påmeldingsfrist ($newDeadline)</label>	{{ newDeadline|date('d.m.Y') }}
