--- a/twig/cloudflare.twig.html
+++ b/twig/cloudflare.twig.html
@@ -15,7 +15,7 @@ Fint å gjøre etter oppdatering av stiler, bilder etc, eller ved ukjente proble
 <div class="col-xs-12 col-sm-7">
 	<h4>Fjern enkeltfiler</h4>
 	<p>Fyll inn lenken til filen du vil oppdatere her. Èn lenke per boks. Trykk på den blå knappen for å legge til bokser.</p>
-	<span style="font-style: italic;">OBS: Benytt hele lenken, f.eks http://grafikk.ukm.no/ambassador/banner-heart.png</span>
+	<span style="font-style: italic;">OBS: Benytt hele lenken, f.eks https://grafikk.ukm.no/ambassador/banner-heart.png</span>
 	<form method="GET" action="admin.php?page=UKMcloudflare_cache&delete=true">
 		<input type="hidden" name="page" value="UKMcloudflare_cache">
 		<input type="hidden" name="delete" value="true">
