--- a/twig/ny_sesong/dash.twig.html
+++ b/twig/ny_sesong/dash.twig.html
@@ -42,5 +42,5 @@
 		<li>Oppdater wordpress <a href="/wp-admin/network/admin.php?page=UKMsystemtools_ny_sesong&do=wordpress">[klikk her for å starte]</a></li>
 		<li>Opprett nye mønstringssider <a href="/wp-admin/network/admin.php?page=UKMsystemtools_ny_sesong&start=0&stop=5&do=true">[klikk her for å starte]</a></li>
 		<li>Oppdater URL-adresser <a href="/wp-admin/network/admin.php?page=UKMsystemtools_modrewrite">[klikk her for å re-generere adresser]</a></li>
-		<li>Fiks bruker for Lærdal og Lardal <a href="http://github.com/UKMNorge/UKMnetwork_admin/issues/4" target="_blank">[les mer]</a></li>
+		<li>Fiks bruker for Lærdal og Lardal <a href="//github.com/UKMNorge/UKMnetwork_admin/issues/4" target="_blank">[les mer]</a></li>
 </ol>
