--- a/twig/postnummer.twig.html
+++ b/twig/postnummer.twig.html
@@ -30,7 +30,7 @@
 	<h2>Importer postnummer</h2>
 	<p>Postnummertabellen baserer seg på data fra Posten/Bring.</p>
 	<ol class="list">
-		<li>Last ned <a href="http://www.bring.no/hele-bring/produkter-og-tjenester/brev-og-postreklame/andre-tjenester/postnummertabeller" target="_blank"><b>alle</b> postnummer</a> som excel-data</li>
+		<li>Last ned <a href="//www.bring.no/hele-bring/produkter-og-tjenester/brev-og-postreklame/andre-tjenester/postnummertabeller" target="_blank"><b>alle</b> postnummer</a> som excel-data</li>
 		<li>Last opp excel-fil
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
